# huaweicloud-sdk-cpp-v3

./: CHANGELOG.md  CHANGELOG_CN.md  CMakeLists.txt  README.md  README_CN.md
cloudtest/src/v1/: CMakeLists.txt  CloudtestClient.cpp  CloudtestMeta.cpp  CloudtestRegion.cpp
cloudtest/src/v1/model/: AddCaseResultFourRequest.cpp  AddCaseResultFourResponse.cpp  AddFeatureRequest.cpp  AddFeatureResponse.cpp  AddRelationsInfo.cpp  AddResourceInfo.cpp  AddTestCaseCommentRequest.cpp  AddTestCaseCommentResponse.cpp  AddTestCaseResultInfo.cpp  AddTestCaseResultLogInfo.cpp  AddTestCaseResultLogRequest.cpp  AddTestCaseResultLogResponse.cpp  AddTestItemInfo.cpp  AlarmStatisticsQuery.cpp  AlarmTemplateInfo.cpp  AlertGroup.cpp  AlertLevel.cpp  AlertStatisticsDto.cpp  AlertTemplateVo.cpp  ApiError.cpp  ArrayNode.cpp  Asset.cpp  AssetExportParam.cpp  AssetTree.cpp  AssignedUserInfo.cpp  AssociateDefectInfoVo.cpp  AssociateIssueInfoVo.cpp  AttachmentFileVo.cpp  AttachmentInfo.cpp  AttachmentVo.cpp  AttributeChange.cpp  AuthInfo.cpp  AvailableConfig.cpp  AwInstanceRes.cpp  AwParam.cpp  AwParamBasicValue.cpp  AwVariable.cpp  BackUpMindmapParam.cpp  BackgroundInfoVo.cpp  BasePageInfoMindmapBackup.cpp  (+632 more)
codeartspipeline/src/v2/: CMakeLists.txt  CodeArtsPipelineClient.cpp  CodeArtsPipelineMeta.cpp  CodeArtsPipelineRegion.cpp
codeartspipeline/src/v2/model/: AcceptManualReviewRequest.cpp  AcceptManualReviewResponse.cpp  ActionsManualRunPipelineDTO.cpp  ActionsPipelineRunsPollingQueryDTO.cpp  ActionsPipelineRunsQueryDTO.cpp  ActionsReRunPipelineDTO.cpp  AgentPluginInfoQueryDTO.cpp  Artifact.cpp  Artifact_hash_code.cpp  BatchMovePipelineToGroupRequest.cpp  BatchMovePipelineToGroupResponse.cpp  BatchShowPipelinesLatestStatusRequest.cpp  BatchShowPipelinesLatestStatusResponse.cpp  BatchShowPipelinesStatusRequest.cpp  BatchShowPipelinesStatusResponse.cpp  BusinessTypePluginsQueryDTO.cpp  CodeEvent.cpp  CodeSource.cpp  CodeSource_params.cpp  Constraint.cpp  CreateBasicPluginRequest.cpp  CreateBasicPluginResponse.cpp  CreatePipelineByTemplateIdRequest.cpp  CreatePipelineByTemplateIdResponse.cpp  CreatePipelineByTemplateRequest.cpp  CreatePipelineByTemplateResponse.cpp  CreatePipelineGroupRequest.cpp  CreatePipelineGroupResponse.cpp  CreatePipelineNewRequest.cpp  CreatePipelineNewResponse.cpp  CreatePipelineTemplateRequest.cpp  CreatePipelineTemplateResponse.cpp  CreatePluginDraftRequest.cpp  CreatePluginDraftResponse.cpp  CreatePluginVersionRequest.cpp  CreatePluginVersionResponse.cpp  CreatePublisherRequest.cpp  CreatePublisherResponse.cpp  CreateRuleReq.cpp  CreateRuleRequest.cpp  (+262 more)
codeartsrepo/src/v3/: CMakeLists.txt  CodeArtsRepoClient.cpp  CodeArtsRepoMeta.cpp  CodeArtsRepoRegion.cpp
codeartsrepo/src/v3/model/: AddDeployKeyRequest.cpp  AddDeployKeyRequestBody.cpp  AddDeployKeyResponse.cpp  AddDeployKeyV2Request.cpp  AddDeployKeyV2Response.cpp  AddHooksRequest.cpp  AddHooksResponse.cpp  AddProtectAccessLevel.cpp  AddProtectBranchV2Request.cpp  AddProtectBranchV2Response.cpp  AddProtectRequest.cpp  AddProtectResponse.cpp  AddRepoMembersRequest.cpp  AddRepoMembersResponse.cpp  AddSshKeyRequest.cpp  AddSshKeyRequestBody.cpp  AddSshKeyResponse.cpp  AddTagV2Request.cpp  AddTagV2Response.cpp  AddTagsRequest.cpp  AddTagsResponse.cpp  ApprovalActionTypeDto.cpp  ApprovalMergeRequestApproversItem.cpp  ApprovalUserDto.cpp  ApproverBasicDto.cpp  AssociateIssuesRequest.cpp  AssociateIssuesRequestBody.cpp  AssociateIssuesResponse.cpp  Author.cpp  Branch.cpp  BranchList.cpp  BranchResponse.cpp  BranchesItem.cpp  CategoryDto.cpp  Commit.cpp  CommitAction.cpp  CommitInfo.cpp  CommitList.cpp  CommitRepoV2.cpp  CommitStatistic.cpp  (+208 more)
codeartsrepo/src/v4/: CMakeLists.txt  CodeArtsRepoClient.cpp  CodeArtsRepoMeta.cpp  CodeArtsRepoRegion.cpp
codeartsrepo/src/v4/model/: ActionDto.cpp  AddGroupWebhookRequest.cpp  AddGroupWebhookResponse.cpp  AddProjectWebhookRequest.cpp  AddProjectWebhookResponse.cpp  AddRepositoryMembersRequest.cpp  AddRepositoryMembersResponse.cpp  AddRepositoryWebhookRequest.cpp  AddRepositoryWebhookResponse.cpp  AddSshKeyRequest.cpp  AddSshKeyResponse.cpp  AddSubmoduleRequest.cpp  AddSubmoduleResponse.cpp  AddTenantTrustedIpAddressRequest.cpp  AddTenantTrustedIpAddressResponse.cpp  AddTrustedIpAddressRequest.cpp  AddTrustedIpAddressRequestBody.cpp  AddTrustedIpAddressResponse.cpp  ApprovalActionTypeDto.cpp  ApprovalApproverInfoDto.cpp  ApprovalMergeRequestRequest.cpp  ApprovalMergeRequestResponse.cpp  (+915 more)
codehub/src/v4/: CMakeLists.txt  CodeHubClient.cpp  CodeHubMeta.cpp  CodeHubRegion.cpp
core/: CMakeLists.txt
core/src/: Client.cpp  RequestParams.cpp
core/src/auth/: AuthCache.cpp  BasicCredentials.cpp  Credentials.cpp  DerivedAKSKSigner.cpp  GlobalCredentials.cpp  HKDF.cpp  IamService.cpp  P256Sha256Signer.cpp  Region.cpp  Signer.cpp  Sm2Sm3Signer.cpp  Sm3Signer.cpp
core/src/bson/: Builder.cpp  Decimal128.cpp  Document.cpp  Oid.cpp  Types.cpp  Viewer.cpp
core/src/exception/: CallTimeoutException.cpp  ClientRequestException.cpp  ConnectionException.cpp  HostUnreachableException.cpp  RequestTimeoutException.cpp  RetryOutageException.cpp  SdkErrorMessage.cpp  SdkException.cpp  ServerResponseException.cpp  ServiceResponseException.cpp  SslHandShakeException.cpp
core/src/http/: FieldDef.cpp  HttpClient.cpp  HttpConfig.cpp  HttpRequest.cpp  HttpRequestDef.cpp  HttpResponse.cpp  UserAgent.cpp
core/src/utils/: AbstractHasher.cpp  Hasher.cpp  HttpContent.cpp  JsonBody.cpp  ModelBase.cpp  MultipartFormData.cpp  Object.cpp  Sha256Hasher.cpp  Sm3Hasher.cpp  Utils.cpp
ecs/: CMakeLists.txt
ecs/src/v2/: CMakeLists.txt  EcsClient.cpp  EcsMeta.cpp  EcsRegion.cpp
ecs/v2/src/: EcsClient.cpp
identitycenter/src/v1/: CMakeLists.txt  IdentityCenterClient.cpp  IdentityCenterMeta.cpp  IdentityCenterRegion.cpp
image/src/v2/: CMakeLists.txt  ImageClient.cpp  ImageMeta.cpp  ImageRegion.cpp
ims/: CMakeLists.txt
ims/src/v2/: CMakeLists.txt  ImsClient.cpp  ImsMeta.cpp  ImsRegion.cpp
ims/v2/src/: ImsClient.cpp
projectman/src/v4/: CMakeLists.txt  ProjectManClient.cpp  ProjectManMeta.cpp  ProjectManRegion.cpp
(+40364 files in other folders)
